FIX: padding on h1 on home page on small viewport

--- a/styles.css
+++ b/styles.css
@@ -452,6 +452,9 @@ textarea, input {
          margin-left: 0px;
          margin-right: 0px;
      }
+     h1.home, .sub-heading.home {
+        padding-left: 1rem;
+     }
 }
 
 
